# multi-wallet

./: .gitignore  AGENTS.md  Anchor.toml  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
programs/multi_wallet/: Cargo.toml
programs/multi_wallet/src/: error.rs  lib.rs
programs/multi_wallet/src/contexts/: change_config.rs  create_multi_wallet.rs  mod.rs  transaction_buffer_close.rs  transaction_buffer_create.rs  transaction_buffer_execute.rs  transaction_buffer_extend.rs  transaction_buffer_vote.rs  transaction_execute.rs  transaction_execute_sync.rs
programs/multi_wallet/src/contexts/admin/: add_whitelisted_address_trees.rs  create_delegates.rs  create_domain_config.rs  create_domain_delegates.rs  create_domain_user_accounts.rs  create_domain_users.rs  create_global_counter.rs  create_global_users.rs  create_user_accounts.rs  delete_domain_config.rs  disable_domain_config.rs  edit_delegate_extension.rs  edit_domain_config.rs  edit_transaction_manager_url.rs  edit_user_extension.rs  migrate_compressed_delegates.rs  migrate_compressed_settings.rs  migrate_compressed_user.rs  migrate_delegate_extension.rs  mod.rs
programs/multi_wallet/src/contexts/compressed/: change_config.rs  compress_settings.rs  create_multi_wallet.rs  mod.rs  transaction_buffer_close.rs  transaction_buffer_create.rs  transaction_buffer_execute.rs  (+4 more)
programs/multi_wallet/src/instructions/: mod.rs
programs/multi_wallet/src/state/: compressed.rs  compressed_settings.rs  delegate.rs  delegate_extensions.rs  domain_config.rs  events.rs  global_counter.rs  key_type.rs  member.rs  mod.rs  permissions.rs  secp256r1.rs  secp256r1_pubkey.rs  secp256r1_verify_args.rs  seeds.rs  settings.rs  settings_compressed.rs  settings_decompressed.rs  transaction_buffer.rs  transaction_message.rs  user.rs  user_extensions.rs  vault_transaction.rs  whitelisted_address_tree.rs
programs/multi_wallet/src/utils/: compressed_token.rs  configuration_args.rs  executable_transaction_message.rs  key_type.rs  member.rs  member_args.rs  mod.rs  permissions.rs  secp256r1_pubkey.rs  secp256r1_verify_args.rs  seeds.rs  settings.rs  system.rs  transaction_action_type.rs  transaction_message.rs  transaction_signers.rs  transfer_ctoken_to_ctoken.rs  transfer_ctoken_to_spl.rs  transfer_spl_to_ctoken.rs  transports.rs  user_role.rs  vault_transaction.rs
sdk/: .gitignore  (+4 more)
(+135 files in other folders)
