[package]
name = "multi_wallet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "multi_wallet"

[features]
default = []
mainnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "light-sdk/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
bytemuck = {version = "1.23.0",  features = ["min_const_generics"]}
base64 = "0.22.1"
serde_json = "1.0.140"
light-sdk = {version = "0.15.0", features = ["anchor"] }
light-hasher = {version = "4.0.0",  features = ["solana"]}
light-sdk-types = {version = "0.15.0"}
light-compressed-account = {version = "0.5.0"}