[package]
name = "multi_wallet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "multi_wallet"

[features]
default = []
mainnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
bytemuck = {version = "1.23.0",  features = ["min_const_generics"]}
base64 = "0.22.1"
light-sdk = {version = "0.16.0", features = ["anchor", "v2"] }
solana-address-lookup-table-interface = {version ="3.0.0", features = ["bytemuck", "bincode"]}
spl-associated-token-account = {version = "7.0.0", features=["no-entrypoint"]}
spl-token-2022 = {version = "9.0.0",features=["no-entrypoint"]}