[package]
name = "multi_wallet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "multi_wallet"

[features]
default = []
mainnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build",]

[dependencies]
anchor-lang = {version = "1.0.2", features = ["init-if-needed"]}
anchor-spl = "1.0.2"
sha2 = "0.11.0"
bytemuck = {version = "1.23.0",  features = ["min_const_generics"]}
base64 = "0.22.1"
solana-address-lookup-table-interface = {version ="3.0.0", features = ["bytemuck", "bincode"]}
solana-instructions-sysvar = "3.0"
